Correct horizontal stretch on pictures

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -27,8 +27,6 @@ body{
     color: white;
 }
 .picture{
-    width: 40%;
-    height: auto;
     margin: auto;
     display: block;
     max-height: 500px;
